<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/PlaceName"
        android:id="@+id/placeName" />

    <ImageView
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:id="@+id/placeIcon"
        android:layout_gravity="right"
        android:layout_weight="0.15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/website"
        android:id="@+id/placeWebsite" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/phoneNumber"
        android:id="@+id/placeNumber" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/placeReviews"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.47" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Go"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal" />
</LinearLayout>